--- a/WatchEntrades.ipynb
+++ b/WatchEntrades.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,10 +57,10 @@
     "from subprocess import Popen, PIPE, STDOUT\n",
     "from subprocess import DEVNULL # py3k\n",
     "DEVNULL = open(os.devnull, 'wb')\n",
-    "from win32process import CREATE_NO_WINDOW\n",
+    "#from win32process import CREATE_NO_WINDOW\n",
     "\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=DeprecationWarning) "
+    "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)"
    ]
   },
   {
@@ -79,15 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sendMail():\n",
     "    # Define email sender and receiver\n",
     "    email_sender = 'nbetsofficial@gmail.com'\n",
-    "    email_password = \"ikpqyoirttgcphfp\"\n",
-    "    email_receiver = ['Garridocho@gmail.com', 'aliahsan365@gmail.com', 'batrolonews@gmail.com']\n",
+    "    email_password = \"Animalnumero!\"\n",
+    "    #email_receiver = ['Garridocho@gmail.com', 'aliahsan365@gmail.com', 'batrolonews@gmail.com']\n",
+    "    email_receiver = ['Garridocho@gmail.com', 'batrolonews@gmail.com']\n",
     "    \n",
     "    # Set the subject and body of the email\n",
     "    subject = 'ENTRADES VILLARREAL BARCELONA A LA VENTA'\n",
@@ -129,20 +130,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def OpenWindow(URL):\n",
-    "    options = webdriver.ChromeOptions()\n",
-    "    driver = webdriver.Chrome(ChromeDriverManager().install(), chrome_options=options)\n",
+    "    #options = webdriver.ChromeOptions()\n",
+    "    #driver = webdriver.Chrome(ChromeDriverManager().install(), chrome_options=options)\n",
+    "    \n",
+    "    driver = webdriver.Chrome(service=ChromeService(ChromeDriverManager().install()))\n",
+    "    print (webdriver.__version__)\n",
     "\n",
     "    return driver"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,55 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - ====== WebDriver manager ======\n",
-      "[WDM] - Current google-chrome version is 109.0.5414\n",
-      "[WDM] - Get LATEST chromedriver version for 109.0.5414 google-chrome\n",
-      "[WDM] - Driver [C:\\Users\\Garri\\.wdm\\drivers\\chromedriver\\win32\\109.0.5414.74\\chromedriver.exe] found in cache\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PRIMERA DIVISIÓN\n",
-      "12/02/2023 - POR CONFIRMAR\n",
-      "VILLARREAL\n",
-      "BARCELONA\n",
-      "PRÓXIMAMENTE\n",
-      "PRIMERA DIVISIÓN\n",
-      "12/02/2023 - POR CONFIRMAR\n",
-      "VILLARREAL\n",
-      "BARCELONA\n",
-      "PRÓXIMAMENTE\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-39f31efd6f66>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdriver\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mOpenWindow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mURL\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mWatchTickets\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdriver\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-8-b7e8f1d935c4>\u001b[0m in \u001b[0;36mWatchTickets\u001b[1;34m(driver)\u001b[0m\n\u001b[0;32m     34\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m         \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m         \u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrefresh\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "URL = \"https://villarrealcf.es/venta-de-entradas/\" \n",
     "\n",
@@ -264,7 +222,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -278,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
