--- a/ScrapTennisCervelloReservaPista.ipynb
+++ b/ScrapTennisCervelloReservaPista.ipynb
@@ -51,6 +51,7 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.support.ui import Select\n",
+    "from selenium.common.exceptions import NoSuchElementException\n",
     "\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from selenium.webdriver.chrome.service import Service\n",
@@ -59,6 +60,7 @@
     "from subprocess import DEVNULL # py3k\n",
     "DEVNULL = open(os.devnull, 'wb')\n",
     "#from win32process import CREATE_NO_WINDOW\n",
+    "\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)"
@@ -155,7 +157,7 @@
     "    ## LOG IN\n",
     "    \n",
     "    username = 'garridocho@gmail.com'\n",
-    "    password = \"yuyuyuyu\"\n",
+    "    password = \"yu\"\n",
     "    \n",
     "    usernameInput = driver.find_element(\"id\",   \"username\")\n",
     "    passwordInput = driver.find_element(\"id\",   \"password\")\n",
@@ -190,11 +192,19 @@
     "    else:\n",
     "        print(\"Could NOT Click the day!\") \n",
     "        \n",
-    "    hourButton = driver.find_element(\"xpath\", \"//a[contains(.,'20:00 > 21:00')]\")\n",
-    "    if hourButton:\n",
+    "    hourButton = driver.find_elements(\"xpath\", \"//a[contains(.,'20:00 > 21:00')]\")\n",
+    "    if hourButton[0]:\n",
     "        time.sleep(2)\n",
-    "        hourButton.click();\n",
+    "        hourButton[0].click();\n",
     "        time.sleep(1)\n",
+    "        try:\n",
+    "            driver.find_element(\"xpath\", \"//select[contains(.,'Indi')]\")\n",
+    "        except NoSuchElementException:\n",
+    "            hourButton = driver.find_elements(\"xpath\", \"//a[contains(.,'20:00 > 21:00')]\")\n",
+    "            if hourButton[1]:\n",
+    "                time.sleep(2)\n",
+    "                hourButton[1].click();\n",
+    "                time.sleep(1)\n",
     "    else:\n",
     "        print(\"Could NOT Click the hour!\") \n",
     "        \n",
