--- a/Atrapar porcentajes quiniela.ipynb
+++ b/Atrapar porcentajes quiniela.ipynb
@@ -82,7 +82,7 @@
     "                   'PorcentajeRealLocal',        'PorcentajeRealDraw',        'PorcentajeRealAway',\n",
     "                   'Acertantes15', 'Premio15', 'Acertantes14', 'Premio14', 'Acertantes13', 'Premio13',\n",
     "                   'Acertantes12', 'Premio12', 'Acertantes11', 'Premio11', 'Acertantes10', 'Premio10',\n",
-    "                   'AcertantesElige8', 'PremioElige8'\n",
+    "                   'AcertantesElige8', 'PremioElige8', 'Recaudacion', 'Bote', 'JornadaDosDivisiones' \n",
     "                  ]\n",
     "\n",
     "jornadaList = []\n",
@@ -110,10 +110,12 @@
     "        select = Select(driverPorcentajes.find_element(\"id\",'u-hidden-scrollbar'))\n",
     "        select.select_by_value(str(jornada))\n",
     "        \n",
+    "        time.sleep(1)\n",
+    "        \n",
     "        selectEscr = Select(driverEscrutinio.find_element(\"id\",'u-hidden-scrollbar'))\n",
     "        selectEscr.select_by_value(str(jornada))\n",
     "        \n",
-    "        time.sleep(2)\n",
+    "        time.sleep(3)\n",
     "        \n",
     "        # Selecting Temporada again because Escrutinio web has a bug that the temporada tab goes mad when changing the jornada.\n",
     "        selectEscr = Select(driverEscrutinio.find_element(\"xpath\",\"//*[starts-with(@class,'c-selector u-custom-select temporada')]/select\"))\n",
@@ -122,7 +124,7 @@
     "    except NoSuchElementException:\n",
     "        jornada = NUM_TOTAL_JORNADAS\n",
     "    \n",
-    "    time.sleep(randint(2,4))  \n",
+    "    time.sleep(randint(3,5))  \n",
     "    \n",
     "    \n",
     "    #####################################\n",
@@ -156,25 +158,33 @@
     "            recaudacionList.append(recaudacionTable)\n",
     "        #print(recaudacionList)\n",
     "        \n",
-    "        acertantesAciertos15_ = recaudacionList[0][3]\n",
+    "        acertantesAciertos15_ = int(''.join(filter(str.isdigit, recaudacionList[0][3])))\n",
     "        premioAciertos15_     = int(\"\".join(filter(str.isdigit, recaudacionList[0][4][0:(recaudacionList[0][4]).find(',')])))\n",
-    "        acertantesAciertos14_ = recaudacionList[0][6]\n",
+    "        acertantesAciertos14_ = int(''.join(filter(str.isdigit, recaudacionList[0][6])))\n",
     "        premioAciertos14_     = int(\"\".join(filter(str.isdigit, recaudacionList[0][7][0:(recaudacionList[0][7]).find(',')])))\n",
-    "        acertantesAciertos13_ = recaudacionList[0][9]\n",
+    "        acertantesAciertos13_ = int(''.join(filter(str.isdigit, recaudacionList[0][9])))\n",
     "        premioAciertos13_     = int(\"\".join(filter(str.isdigit, recaudacionList[0][10][0:(recaudacionList[0][10]).find(',')])))\n",
-    "        acertantesAciertos12_ = recaudacionList[0][12]\n",
+    "        acertantesAciertos12_ = int(''.join(filter(str.isdigit, recaudacionList[0][12])))\n",
     "        premioAciertos12_     = int(\"\".join(filter(str.isdigit, recaudacionList[0][13][0:(recaudacionList[0][13]).find(',')])))\n",
-    "        acertantesAciertos11_ = recaudacionList[0][15]\n",
+    "        acertantesAciertos11_ = int(''.join(filter(str.isdigit, recaudacionList[0][15])))\n",
     "        premioAciertos11_     = int(\"\".join(filter(str.isdigit, recaudacionList[0][16][0:(recaudacionList[0][16]).find(',')])))\n",
-    "        acertantesAciertos10_ = recaudacionList[0][18]\n",
+    "        acertantesAciertos10_ = int(''.join(filter(str.isdigit, recaudacionList[0][18])))\n",
     "        premioAciertos10_     = int(\"\".join(filter(str.isdigit, recaudacionList[0][19][0:(recaudacionList[0][19]).find(',')])))\n",
     "        if(len(recaudacionList[0]) > 25):\n",
-    "            acertantesElige8_     = recaudacionList[0][27]\n",
+    "            acertantesElige8_     = int(''.join(filter(str.isdigit, recaudacionList[0][27])))\n",
     "            premioElige8_         = int(\"\".join(filter(str.isdigit, recaudacionList[0][28][0:(recaudacionList[0][28]).find(',')])))\n",
     "        else:\n",
     "            acertantesElige8_ = -1\n",
     "            premioElige8_ = -1\n",
-    "    \n",
+    "            \n",
+    "        recaudacionMoney = driverEscrutinio.find_elements(\"xpath\", \"//span[contains(.,'€')]\")\n",
+    "        recaudacion_aux = recaudacionMoney[0].text.split(\",\")[0] # Get just the euros\n",
+    "        recaudacion_ = int(''.join(filter(str.isdigit, recaudacion_aux))) # Get just the numbers\n",
+    "        try:\n",
+    "            bote_aux = recaudacionMoney[1].text.split(\",\")[0] # Get just the euros\n",
+    "            bote_ = int(''.join(filter(str.isdigit, bote_aux))) # Get just the numbers\n",
+    "        except:\n",
+    "            bote_ = 0\n",
     "\n",
     "        ii_mainBoxTable = 0 # be careful not incrementing ++ (by one)\n",
     "        while(ii_mainBoxTable < (MAIN_BOX_INCREMENT_BETWEEN_MATCHES * NUM_MATCHES_IN_A_JORNADA)):\n",
@@ -213,7 +223,7 @@
     "                   acertantesAciertos15_, premioAciertos15_, acertantesAciertos14_, premioAciertos14_,                         \n",
     "                   acertantesAciertos13_, premioAciertos13_, acertantesAciertos12_, premioAciertos12_,\n",
     "                   acertantesAciertos11_, premioAciertos11_, acertantesAciertos10_, premioAciertos10_,\n",
-    "                   acertantesElige8_, premioElige8_  \n",
+    "                   acertantesElige8_, premioElige8_, recaudacion_, bote_, jornadaDosDivisiones_ \n",
     "                  ]\n",
     "            \n",
     "            jornadaList.append(row)\n",
@@ -232,6 +242,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#df = pd.DataFrame(jornadaList, columns=columns)\n",
+    "#df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df"
    ]
   },
@@ -241,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"Quiniela_2324Partial.csv\", index=False, header=True)"
+    "df.to_csv(\"Quiniela_2021a.csv\", index=False, header=True)"
    ]
   },
   {
