--- a/Atrapar porcentajes quiniela.ipynb
+++ b/Atrapar porcentajes quiniela.ipynb
@@ -185,6 +185,10 @@
     "            bote_ = int(''.join(filter(str.isdigit, bote_aux))) # Get just the numbers\n",
     "        except:\n",
     "            bote_ = 0\n",
+    "            \n",
+    "        jornadaDosDivisiones_ = False\n",
+    "        if(recaudacion_ > 2000000): # Although is not 100% sure.\n",
+    "            jornadaDosDivisiones_ = True\n",
     "\n",
     "        ii_mainBoxTable = 0 # be careful not incrementing ++ (by one)\n",
     "        while(ii_mainBoxTable < (MAIN_BOX_INCREMENT_BETWEEN_MATCHES * NUM_MATCHES_IN_A_JORNADA)):\n",
